Change top page design

--- a/app/assets/stylesheets/pricing.scss
+++ b/app/assets/stylesheets/pricing.scss
@@ -1,8 +1,19 @@
 // https://startbootstrap.com/snippets/pricing-table
 
+$start-color: #87b1ff;
+$end-color: #026dff;
+
 section.pricing {
-  background: #fdcc52;
-  background: linear-gradient(#fdcc52, #fdc539);
+  background: url("/template/img/bg-pattern.png"), $start-color;
+  background: url("/template/img/bg-pattern.png"), linear-gradient(to left, $start-color, #026dff);
+
+  p.lead {
+    color: white;
+
+    a {
+      color: white;
+    }
+  }
 
   .card {
     border: none;
@@ -48,12 +59,17 @@ section.pricing {
     padding: 1rem;
     opacity: 1;
     transition: all 0.2s;
-    background: #7b4397;
-    background: linear-gradient(to left, #7b4397, #dc2430);
+    background: url("/template/img/bg-pattern.png"), $start-color;
+    background: url("/template/img/bg-pattern.png"), linear-gradient(to left, $start-color, #026dff);
 
     &.disabled {
       opacity: 0.8;
     }
+  }
+
+  #pricing-footnote {
+    color: white;
+    opacity: 0.7;
   }
 
   /* Hover Effects on Card */
