--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,7 @@
     </div>
   </header>
 
-  <section class="download bg-primary text-center">
+  <section class="download text-center">
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
