--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title><%= t('app_name') %></title>
+  <link rel="icon" type="image/png" href="<%= image_path('/favicon.png') %>">
   <meta charset="utf-8">
   <% if controller_name == 'home' %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
