--- a/app/assets/stylesheets/new-age.scss
+++ b/app/assets/stylesheets/new-age.scss
@@ -4,6 +4,9 @@
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-new-age/blob/master/LICENSE)
  */
 
+$start-color: #87b1ff;
+$end-color: #026dff;
+
 html,
 body {
   width: 100%;
@@ -71,7 +74,7 @@ body {
   }
 
   #mainNav .navbar-brand {
-    color: #fdcc52;
+    color: white;
     font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
     font-weight: 200;
     letter-spacing: 1px;
@@ -79,12 +82,6 @@ body {
 
   #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
     color: #fcbd20;
-  }
-
-  #mainNav .navbar-toggler {
-    font-size: 12px;
-    padding: 8px 10px;
-    color: #222222;
   }
 
   #mainNav .navbar-nav > li > a {
@@ -125,7 +122,7 @@ body {
   }
   #mainNav .navbar-nav > li > a,
   #mainNav .navbar-nav > li > a:focus {
-    color: rgba(255, 255, 255, 0.7);
+    color: white;
   }
   #mainNav .navbar-nav > li > a:hover,
   #mainNav .navbar-nav > li > a:focus:hover {
@@ -156,8 +153,8 @@ body {
     padding-top: 150px;
     padding-bottom: 100px;
     color: white;
-    background: url("/template/img/bg-pattern.png"), #7b4397;
-    background: url("/template/img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+    background: url("/template/img/bg-pattern.png"), $start-color;
+    background: url("/template/img/bg-pattern.png"), linear-gradient(to left, $start-color, $end-color);
   }
 
   header.masthead .header-content {
@@ -224,8 +221,8 @@ body {
 
   section.download .row a.btn {
     border: none;
-    background: #7b4397;
-    background: linear-gradient(to left, #7b4397, #dc2430);
+    background: url("/template/img/bg-pattern.png"), $start-color;
+    background: url("/template/img/bg-pattern.png"), linear-gradient(to left, $start-color, $end-color);
   }
 
   @media (min-width: 768px) {
@@ -257,8 +254,8 @@ body {
     padding-top: 150px;
     padding-bottom: 100px;
     color: white;
-    background: url("/template/img/bg-pattern.png"), #7b4397;
-    background: url("/template/img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+    background: url("/template/img/bg-pattern.png"), $start-color;
+    background: url("/template/img/bg-pattern.png"), linear-gradient(to left, $start-color, $end-color);
   }
 
   @media (min-width: 768px) {
@@ -309,15 +306,15 @@ body {
     font-size: 80px;
     display: block;
     margin-bottom: 15px;
-    background: linear-gradient(to left, #7b4397, #dc2430);
+    background: linear-gradient(to left, $start-color, $end-color);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 
   section.features .section-heading a.btn {
-    background: #7b4397;
-    background: linear-gradient(to left, #7b4397, #dc2430);
+    background: url("/template/img/bg-pattern.png"), $start-color;
+    background: url("/template/img/bg-pattern.png"), linear-gradient(to left, $start-color, $end-color);
   }
 
   section.cta {
@@ -453,9 +450,9 @@ body {
   }
 
   .btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
+    margin-top: -.25rem;
+    margin-bottom: .25rem;
     color: white;
-    border-color: #fdcc52;
-    background-color: #fdcc52;
   }
 
   .btn {
@@ -466,7 +463,7 @@ body {
   }
 
   .btn-xl {
-    font-size: 11px;
+    font-size: 18px;
     padding: 15px 45px;
   }
 }
