--- a/app/views/home/_pricing.html.erb
+++ b/app/views/home/_pricing.html.erb
@@ -1,9 +1,9 @@
 <section class="pricing py-5">
   <div class="container">
-    <div class="text-center mb-5">
+    <p class="lead text-center mb-5">
       <%= t('.description', date: l(2.weeks.since, format: :pricing)) %>
       <sup><a href="#pricing-footnote">1</a></sup>
-    </div>
+    </p>
     <div class="row">
       <!-- Free Tier -->
       <div class="col-lg-4">
@@ -104,7 +104,7 @@
         </div>
       </div>
     </div>
-    <div id="pricing-footnote" class="small text-muted mt-5"><sup>1</sup><%= t('.footnote') %></div>
+    <div id="pricing-footnote" class="small mt-5"><sup>1</sup><%= t('.footnote') %></div>
   </div>
 </section>
 
