Add new screenshot

--- a/app/assets/stylesheets/pricing.scss
+++ b/app/assets/stylesheets/pricing.scss
@@ -50,6 +50,10 @@ section.pricing {
     color: #dc2430 !important;
   }
 
+  li.text-muted {
+    opacity: 0.3;
+  }
+
   .btn {
     color: white;
     font-size: 80%;
