--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -20,6 +20,9 @@
           <% end %>
         </li>
         <li class="list-inline-item">
+          <a href="https://startbootstrap.com/theme/new-age" target="_blank">New Age template</a>
+        </li>
+        <li class="list-inline-item">
           <% if user_signed_in? %>
             <a href="#" data-toggle="modal" data-target="#sign-out-modal"><%= t('home.index.sign_out') %></a>
           <% else %>
