--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,7 +69,7 @@
     <div class="container">
       <div class="section-heading text-center">
         <h2 class="mb-5"><%= t('.features.title', app: t('app_name')) %></h2>
-        <p class="text-muted mb-5"><%= t('.features.text_html', app: t('app_name')) %></p>
+        <p class="mb-5"><%= t('.features.text_html', app: t('app_name')) %></p>
         <div>
           <a href="<%= raw user_twitter_omniauth_authorize_path(via: 'features') %>" class="btn btn-outline btn-xl"><%= t('.masthead.button') %></a>
         </div>
