--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -52,39 +52,39 @@
       <input class="form-check-input" type="radio" name="category" id="category-followers" value="followers" data-label="<%= t('.search_category.followers') %>">
       <label class="form-check-label" for="category-followers"><%= t('.search_category.followers') %>&nbsp;<span class="count small text-muted"></span></label>
     </div>
-    <div class="form-check mb-2">
-      <% if current_user.has_subscription?(:plus) %>
+    <% if current_user.has_subscription?(:plus) %>
+      <div class="form-check mb-2">
         <input class="form-check-input" type="radio" name="category" id="category-one_sided_friends" value="one_sided_friends" data-label="<%= t('.search_category.one_sided_friends') %>">
         <label class="form-check-label" for="category-one_sided_friends"><%= t('.search_category.one_sided_friends') %>&nbsp;<span class="count small text-muted"></span></label>
-      <% else %>
-        <div id="category-one_sided_friends" class="disabled">
-          <input class="form-check-input" type="radio" disabled>
-          <label class="form-check-label" for="category-one_sided_friends"><%= t('.search_category.one_sided_friends') %>&nbsp;<span class="count small text-muted"></span></label>
-        </div>
-      <% end %>
-    </div>
-    <div class="form-check mb-2">
-      <% if current_user.has_subscription?(:plus) %>
+      </div>
+    <% else %>
+      <div class="form-check disabled mb-2">
+        <input class="form-check-input" type="radio" disabled>
+        <label class="form-check-label" for="category-one_sided_friends"><%= t('.search_category.one_sided_friends') %>&nbsp;<span class="count small text-muted"></span></label>
+      </div>
+    <% end %>
+    <% if current_user.has_subscription?(:plus) %>
+      <div class="form-check mb-2">
         <input class="form-check-input" type="radio" name="category" id="category-one_sided_followers" value="one_sided_followers" data-label="<%= t('.search_category.one_sided_followers') %>">
         <label class="form-check-label" for="category-one_sided_followers"><%= t('.search_category.one_sided_followers') %>&nbsp;<span class="count small text-muted"></span></label>
-      <% else %>
-        <div id="category-one_sided_followers" class="disabled">
-          <input class="form-check-input" type="radio" disabled>
-          <label class="form-check-label" for="category-one_sided_followers"><%= t('.search_category.one_sided_followers') %>&nbsp;<span class="count small text-muted"></span></label>
-        </div>
-      <% end %>
-    </div>
-    <div class="form-check">
-      <% if current_user.has_subscription?(:plus) %>
+      </div>
+    <% else %>
+      <div class="form-check disabled mb-2">
+        <input class="form-check-input" type="radio" disabled>
+        <label class="form-check-label" for="category-one_sided_followers"><%= t('.search_category.one_sided_followers') %>&nbsp;<span class="count small text-muted"></span></label>
+      </div>
+    <% end %>
+    <% if current_user.has_subscription?(:plus) %>
+      <div class="form-check">
         <input class="form-check-input" type="radio" name="category" id="category-mutual_friends" value="mutual_friends" data-label="<%= t('.search_category.mutual_friends') %>">
         <label class="form-check-label" for="category-mutual_friends"><%= t('.search_category.mutual_friends') %>&nbsp;<span class="count small text-muted"></span></label>
-      <% else %>
-        <div id="category-mutual_friends" class="disabled">
-          <input class="form-check-input" type="radio" disabled>
-          <label class="form-check-label" for="category-mutual_friends"><%= t('.search_category.mutual_friends') %>&nbsp;<span class="count small text-muted"></span></label>
-        </div>
-      <% end %>
-    </div>
+      </div>
+    <% else %>
+      <div class="form-check disabled">
+        <input class="form-check-input" type="radio" disabled>
+        <label class="form-check-label" for="category-mutual_friends"><%= t('.search_category.mutual_friends') %>&nbsp;<span class="count small text-muted"></span></label>
+      </div>
+    <% end %>
   </div>
 
   <% unless current_user.has_subscription?(:plus) %>
@@ -222,14 +222,8 @@
 
     $('[data-toggle="tooltip"]').tooltip();
 
-    $('#category-one_sided_friends.disabled').on('click', function () {
-      alert('<%= t('.search_category.disabled.one_sided_friends') %>');
-    });
-    $('#category-one_sided_followers.disabled').on('click', function () {
-      alert('<%= t('.search_category.disabled.one_sided_followers') %>');
-    });
-    $('#category-mutual_friends.disabled').on('click', function () {
-      alert('<%= t('.search_category.disabled.mutual_friends') %>');
+    $('.form-check.disabled').on('click', function () {
+      alert('<%= t('.search_category.disabled_check') %>');
     });
   });
 </script>
