--- a/app/views/shared/_stripe.html.erb
+++ b/app/views/shared/_stripe.html.erb
@@ -5,6 +5,7 @@
     var signedIn = <%= user_signed_in? %>;
     var hasSubscription = <%= user_signed_in? && current_user.has_subscription?(:plus) %>;
     var i18n = {already_purchased: '<%= t('.already_purchased') %>'};
-    new MyStripe(signedIn, hasSubscription, i18n).init();
+    var locale = '<%= I18n.locale %>';
+    new MyStripe(signedIn, hasSubscription, i18n, locale).init();
   })
 </script>
