--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,6 +29,8 @@
           <p class="text-muted small mb-5"><%= t('.free_plan_note_html') %></p>
         <% end %>
 
+        <div id="chart-container" class="mb-5"></div>
+
         <div id="search-response"></div>
       </div>
     </div>
