--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title><%= t('app_name') %></title>
   <link rel="icon" type="image/png" href="<%= image_path('/favicon.png') %>">
   <meta charset="utf-8">
-  <% unless params[:desktop_site] == 'true' %>
+  <% unless show_desktop_site? %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <% end %>
   <meta name="description" content="">
