--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,12 +36,7 @@
 </head>
 
 <body>
-<% if flash[:alert] %>
-  <div><%= flash[:alert] %></div>
-<% end %>
-<% if flash[:notice] %>
-  <div><%= flash[:notice] %></div>
-<% end %>
+<%= render partial: 'shared/flash_message' %>
 
 <%= yield %>
 
