--- a/app/assets/stylesheets/new-age.scss
+++ b/app/assets/stylesheets/new-age.scss
@@ -459,3 +459,15 @@ body {
     padding: 15px 45px;
   }
 }
+
+#login-container {
+  background: url("/template/img/bg-pattern.png"), $start-color;
+  background: url("/template/img/bg-pattern.png"), linear-gradient(to left, $start-color, $end-color);
+
+  .app-name {
+    font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
+    font-weight: 200;
+    letter-spacing: 1px;
+    vertical-align: middle;
+  }
+}
