--- a/app/assets/stylesheets/new-age.scss
+++ b/app/assets/stylesheets/new-age.scss
@@ -68,86 +68,93 @@ body {
   }
 
   #mainNav {
-    border-color: rgba(34, 34, 34, 0.05);
-    background-color: white;
+    border-color: transparent;
+    background-color: transparent;
     transition: all .35s;
     font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
     font-weight: 200;
     letter-spacing: 1px;
-  }
 
-  #mainNav .navbar-brand {
-    color: white;
-    font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-    font-weight: 200;
-    letter-spacing: 1px;
-  }
+    .navbar-brand {
+      color: white;
+      font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
+      font-weight: 200;
+      letter-spacing: 1px;
+    }
 
-  #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
-    color: #fcbd20;
-  }
+    .navbar-brand:hover, .navbar-brand:focus {
+      color: #fcbd20;
+    }
 
-  #mainNav .navbar-nav > li > a {
-    font-size: 11px;
-    font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
-    letter-spacing: 2px;
-    text-transform: uppercase;
-  }
+    .navbar-nav > li > a {
+      font-size: 11px;
+      font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
 
-  #mainNav .navbar-nav > li > a.active {
-    color: #fdcc52 !important;
-    background-color: transparent;
-  }
+    .navbar-nav > li > a.active {
+      color: #fdcc52 !important;
+      background-color: transparent;
+    }
 
-  #mainNav .navbar-nav > li > a.active:hover {
-    background-color: transparent;
-  }
+    .navbar-nav > li > a.active:hover {
+      background-color: transparent;
+    }
 
-  #mainNav .navbar-nav > li > a,
-  #mainNav .navbar-nav > li > a:focus {
-    color: #222222;
-  }
+    .navbar-nav > li > a,
+    .navbar-nav > li > a:focus {
+      color: #222222;
+    }
 
-  #mainNav .navbar-nav > li > a:hover,
-  #mainNav .navbar-nav > li > a:focus:hover {
-    color: #fdcc52;
-  }
+    .navbar-nav > li > a:hover,
+    .navbar-nav > li > a:focus:hover {
+      color: #fdcc52;
+    }
 
-  #mainNav {
-    border-color: transparent;
-    background-color: transparent;
-  }
-  #mainNav .navbar-brand {
-    color: fade(white, 70%);
-  }
-  #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
-    color: white;
-  }
-  #mainNav .navbar-nav > li > a,
-  #mainNav .navbar-nav > li > a:focus {
-    color: white;
-  }
-  #mainNav .navbar-nav > li > a:hover,
-  #mainNav .navbar-nav > li > a:focus:hover {
-    color: white;
-  }
-  #mainNav.navbar-shrink {
-    border-color: rgba(34, 34, 34, 0.1);
-    background-color: white;
-  }
-  #mainNav.navbar-shrink .navbar-brand {
-    color: #222222;
-  }
-  #mainNav.navbar-shrink .navbar-brand:hover, #mainNav.navbar-shrink .navbar-brand:focus {
-    color: #fdcc52;
-  }
-  #mainNav.navbar-shrink .navbar-nav > li > a,
-  #mainNav.navbar-shrink .navbar-nav > li > a:focus {
-    color: #222222;
-  }
-  #mainNav.navbar-shrink .navbar-nav > li > a:hover,
-  #mainNav.navbar-shrink .navbar-nav > li > a:focus:hover {
-    color: #fdcc52;
+    .navbar-brand {
+      color: fade(white, 70%);
+    }
+
+    .navbar-brand:hover,
+    .navbar-brand:focus {
+      color: white;
+    }
+
+    .navbar-nav > li > a,
+    .navbar-nav > li > a:focus {
+      color: white;
+    }
+
+    .navbar-nav > li > a:hover,
+    .navbar-nav > li > a:focus:hover {
+      color: white;
+    }
+
+    &.navbar-shrink {
+      border-color: rgba(34, 34, 34, 0.1);
+      background-color: white;
+    }
+
+    &.navbar-shrink .navbar-brand {
+      color: #222222;
+    }
+
+    &.navbar-shrink .navbar-brand:hover,
+    &.navbar-shrink .navbar-brand:focus {
+      color: #fdcc52;
+    }
+
+    &.navbar-shrink .navbar-nav > li > a,
+    &.navbar-shrink .navbar-nav > li > a:focus {
+      color: #222222;
+    }
+
+    &.navbar-shrink .navbar-nav > li > a:hover,
+    &.navbar-shrink .navbar-nav > li > a:focus:hover {
+      color: #fdcc52;
+    }
+
   }
 
   .device-container {
@@ -168,32 +175,32 @@ body {
     color: white;
     background: url("/template/img/bg-pattern.png"), $start-color;
     background: url("/template/img/bg-pattern.png"), linear-gradient(to left, $start-color, $end-color);
-  }
 
-  header.masthead .header-content {
-    max-width: 500px;
-    margin-bottom: 100px;
-    text-align: center;
-  }
+    .header-content {
+      max-width: 500px;
+      margin-bottom: 100px;
+      text-align: center;
+    }
 
-  header.masthead .header-content h1 {
-    font-size: $title-medium;
-  }
+    .header-content h1 {
+      font-size: $title-medium;
+    }
 
-  @media (min-width: 992px) {
-    header.masthead {
+    @media (min-width: 992px) {
       height: 100vh;
       min-height: 775px;
       padding-top: 0;
       padding-bottom: 0;
+
+      .header-content {
+        margin-bottom: 0;
+        text-align: left;
+      }
+      .header-content h1 {
+        font-size: $title-large;
+      }
     }
-    header.masthead .header-content {
-      margin-bottom: 0;
-      text-align: left;
-    }
-    header.masthead .header-content h1 {
-      font-size: $title-large;
-    }
+
   }
 
   section.download {
@@ -246,60 +253,63 @@ body {
     }
   }
 
-  section.features .section-heading {
-    margin-bottom: 100px;
-  }
-
-  section.features .section-heading h2 {
-    font-size: $title-medium;
-    margin-top: 0;
-  }
-
-  section.features .section-heading p {
-    margin-bottom: 0;
-  }
-
-  section.features .feature-item {
-    max-width: 325px;
-    margin: 0 auto;
-  }
-
-  section.features .device-container {
-    margin-bottom: 100px;
-  }
-
-  @media (min-width: 992px) {
-    section.features .section-heading h2 {
-      font-size: $title-large;
+  section.features {
+    .section-heading {
+      margin-bottom: 100px;
     }
-    section.features .device-container {
+
+    .section-heading h2 {
+      font-size: $title-medium;
+      font-weight: bold;
+      margin-top: 0;
+    }
+
+    .section-heading p {
       margin-bottom: 0;
     }
-  }
 
-  section.features .feature-item {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    text-align: center;
-  }
+    .feature-item {
+      max-width: 325px;
+      margin: 0 auto;
+    }
 
-  section.features .feature-item h3 {
-    font-size: 30px;
-  }
+    .device-container {
+      margin-bottom: 100px;
+    }
 
-  section.features .feature-item i {
-    font-size: 80px;
-    display: block;
-    margin-bottom: 15px;
-    background: linear-gradient(to left, $start-color, $end-color);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
+    @media (min-width: 992px) {
+      .section-heading h2 {
+        font-size: $title-large;
+      }
+      .device-container {
+        margin-bottom: 0;
+      }
+    }
 
-  section.features .section-heading a.btn {
-    background: url("/template/img/bg-pattern.png"), $start-color;
-    background: url("/template/img/bg-pattern.png"), linear-gradient(to left, $start-color, $end-color);
+    .feature-item {
+      padding-top: 50px;
+      padding-bottom: 50px;
+      text-align: center;
+    }
+
+    .feature-item h3 {
+      font-size: 30px;
+    }
+
+    .feature-item i {
+      font-size: 80px;
+      display: block;
+      margin-bottom: 15px;
+      background: linear-gradient(to left, $start-color, $end-color);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .section-heading a.btn {
+      background: url("/template/img/bg-pattern.png"), $start-color;
+      background: url("/template/img/bg-pattern.png"), linear-gradient(to left, $start-color, $end-color);
+    }
   }
 
   section.cta {
@@ -308,92 +318,92 @@ body {
     background-image: url("/template/img/bg-cta.jpg");
     background-position: center;
     background-size: cover;
-  }
 
-  section.cta .cta-content {
-    position: relative;
-    z-index: 1;
-  }
-
-  section.cta .cta-content h2 {
-    font-size: 50px;
-    max-width: 450px;
-    margin-top: 0;
-    margin-bottom: 25px;
-    color: white;
-  }
-
-  @media (min-width: 768px) {
-    section.cta .cta-content h2 {
-      font-size: 80px;
+    .cta-content {
+      position: relative;
+      z-index: 1;
     }
-  }
 
-  section.cta .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    .cta-content h2 {
+      font-size: 50px;
+      max-width: 450px;
+      margin-top: 0;
+      margin-bottom: 25px;
+      color: white;
+    }
+
+    @media (min-width: 768px) {
+      .cta-content h2 {
+        font-size: 80px;
+      }
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
   }
 
   section.contact {
     text-align: center;
-  }
 
-  section.contact h2 {
-    font-size: $title-medium;
-    margin-top: 0;
-    margin-bottom: 25px;
-  }
-
-  section.contact h2 i {
-    color: #dd4b39;
-  }
-
-  section.contact ul.list-social {
-    margin-bottom: 0;
-  }
-
-  section.contact ul.list-social li a {
-    font-size: 40px;
-    line-height: 80px;
-    display: block;
-    width: 80px;
-    height: 80px;
-    color: white;
-    border-radius: 100%;
-  }
-
-  @media (min-width: 992px) {
-    section.contact h2 {
-      font-size: $title-large;
+    h2 {
+      font-size: $title-medium;
+      margin-top: 0;
+      margin-bottom: 25px;
     }
-  }
 
-  section.contact ul.list-social li.social-twitter a {
-    background-color: #1da1f2;
-  }
+    h2 i {
+      color: #dd4b39;
+    }
 
-  section.contact ul.list-social li.social-twitter a:hover {
-    background-color: #0d95e8;
-  }
+    ul.list-social {
+      margin-bottom: 0;
+    }
 
-  section.contact ul.list-social li.social-facebook a {
-    background-color: #3b5998;
-  }
+    ul.list-social li a {
+      font-size: 40px;
+      line-height: 80px;
+      display: block;
+      width: 80px;
+      height: 80px;
+      color: white;
+      border-radius: 100%;
+    }
 
-  section.contact ul.list-social li.social-facebook a:hover {
-    background-color: #344e86;
-  }
+    @media (min-width: 992px) {
+      h2 {
+        font-size: $title-large;
+      }
+    }
 
-  section.contact ul.list-social li.social-google-plus a {
-    background-color: #dd4b39;
-  }
+    ul.list-social li.social-twitter a {
+      background-color: #1da1f2;
+    }
 
-  section.contact ul.list-social li.social-google-plus a:hover {
-    background-color: #d73925;
+    ul.list-social li.social-twitter a:hover {
+      background-color: #0d95e8;
+    }
+
+    ul.list-social li.social-facebook a {
+      background-color: #3b5998;
+    }
+
+    ul.list-social li.social-facebook a:hover {
+      background-color: #344e86;
+    }
+
+    ul.list-social li.social-google-plus a {
+      background-color: #dd4b39;
+    }
+
+    ul.list-social li.social-google-plus a:hover {
+      background-color: #d73925;
+    }
   }
 
   footer {
