--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -23,7 +23,7 @@
     <div class="col order-md-1">
       <a id="search-response-anchor" style="display: block; position: relative; top: -60px; visibility: hidden;"></a>
       <div class="pb-5" style="min-height: 300px;">
-        <p class="search-response-title lead mb-5" style="display: none;">
+        <p id="search-response-title" class="lead mb-5" style="display: none;">
           <%= t('dashboard.form.search_response.html') %>
         </p>
 
