Initial label is first job of FriendsInsight

--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -131,7 +131,7 @@
   </div>
   <div class="input-group mb-2">
     <input type="text" id="search-label" class="form-control"
-           value="<%= current_user.to_user_decorator(self).job_label_s %>"
+           value="<%= initial_label %>"
            data-placeholder="<%= t('.search_label.placeholder') %>"
            data-placeholder-job="<%= t('.search_label.placeholder_job') %>"
            data-placeholder-location="<%= t('.search_label.placeholder_location') %>"
