--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title><%= t('app_name') %></title>
-  <link rel="icon" type="image/png" href="<%= image_path('/favicon.png') %>">
   <meta charset="utf-8">
+  <title><%= t('root_title') %></title>
+  <meta name="description" content="<%= t('root_description') %>">
+  <link rel="icon" type="image/png" href="<%= image_path('/favicon.png') %>">
   <% unless show_desktop_site? %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <% end %>
-  <meta name="description" content="">
-  <meta name="author" content="">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
+
+  <link rel="canonical" href="https://searchfollowers.com/">
+  <link rel="alternate" href="https://searchfollowers.com/" hreflang="x-default" />
+  <link rel="alternate" href="https://searchfollowers.com/?locale=en" hreflang="en" />
+  <link rel="alternate" href="https://searchfollowers.com/?locale=ja" hreflang="ja" />
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
